@@ -1,8 +1,10 @@
-CHANGES.txt - 2010-03-02
+CHANGES.txt - 2010-03-03
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- The scheduler no longer supports the old Mac OS X Server quota
+	  plugin.
 	- The scheduler now allows writing to /Users/Shared from print filters
 	  on Mac OS X.
 	- CUPS no longer supports the old ~/.cupsrc or ~/.lpoptions files from
